fixed header container responsiveness on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -145,7 +145,7 @@ img{
     }
 }
 .nav__item{
-    margin-bottom: var(--mb-4);
+ margin-bottom: var(--mb-4);
 
 }
 .nav__link{
@@ -191,6 +191,8 @@ img{
     height: calc(100vh - var(--header-height));
     row-gap: 5rem;
 }
+
+
 .home__title{
     align-self: flex-end;
     font-size: var(--header-font-size);
@@ -228,7 +230,6 @@ img{
     padding-top: 1rem;
     width: 120px;
     height: 120px;
-    /*background-color: var(--first-color); */
     border-radius: 50%;
     overflow: hidden;
 }
@@ -419,6 +420,13 @@ img{
  .portfolio__img .portfolio__link{
     bottom: 0;
  }
+
+ .home__container > h1{
+    color: var(--white-color);
+    margin-top: -75px;
+
+
+  }
 }
 
 
